syntax = "proto3";

package image_processing;

service GrayscaleService {
  rpc GrayscaleImage(ImageRequest) returns (ImageResponse) {}
}

service AsciiService {
  rpc ConvertToAscii(ImageRequest) returns (AsciiResponse) {}
//   rpc ConvertToAscii(AsciiRequest) returns (AsciiResponse) {}
}

message ImageRequest {
  bytes image_data = 1;
}

message ImageResponse {
  bytes image_data = 1;
}

// message AsciiRequest {
//   bytes image_data = 1;
// }

message AsciiResponse {
  string ascii_data = 1;
}

service ResizeService {
  rpc ResizeImage(ResizeRequest) returns (ResizeResponse) {}
}

message ResizeRequest {
  bytes image_data = 1;
  uint32 max_width = 2;
}

message ResizeResponse {
  bytes image_data = 1;
}
